--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
 
     <button id="duel">DUEL!</button>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js%22%3E" ></script>
+    <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.4.0/dist/axios.min.js" ></script>
     <script src="index.js"></script>
 </body>
 </html>
